--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+amqp==2.1.4
+appdirs==1.4.0
+billiard==3.5.0.2
+celery==4.0.0
+Django==1.10.2
+django-celery-beat==1.0.1
+django-filter==0.15.2
+djangorestframework==3.4.7
 flake8==3.0.4
 flake8-double-quotes==0.0.1
 flake8-import-order==0.9.2
+kombu==4.0.2
 mccabe==0.5.2
+packaging==16.8
 pep8-naming==0.4.1
 pycodestyle==2.0.0
 pyflakes==1.2.3
-six==1.10.0
-django==1.10.2
-django-filter==0.15.2
-djangorestframework==3.4.7
-celery==4.0.0
-celerybeat==3.1.17
+pyparsing==2.1.10
+pytz==2016.10
 PyYAML==3.12
+six==1.10.0
+vine==1.1.3
