CIのセットアップ

--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ skipsdist = True
 
 [flake8]
 filename = *.py
-exclude = .direnv/*
+exclude = .direnv/*, ./server/migrations/*, ./accounts/migrations/*
