settings.pyを一部修正およびスタイルチェックから除外 & datetime.nowでなくdjangoのtimezoneを使うよう修正

--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ skipsdist = True
 
 [flake8]
 filename = *.py
-exclude = .direnv/*, ./server/migrations/*, ./accounts/migrations/*, ./manage.py, ./accounts/admin.py, ./accounts/models.py, ./accounts/tests.py, ./accounts/views.py, ./server/tests.py
+exclude = .direnv/*, ./server/migrations/*, ./accounts/migrations/*, ./manage.py, ./accounts/admin.py, ./accounts/models.py, ./accounts/tests.py, ./accounts/views.py, ./server/tests.py, ./seot_server/settings.py
