--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==2.1.4
 appdirs==1.4.0
 billiard==3.5.0.2
 celery==4.0.0
+dj-database-url==0.4.2
 Django==1.10.2
 django-celery-beat==1.0.1
 django-filter==0.15.2
@@ -15,6 +16,7 @@ packaging==16.8
 pep8-naming==0.4.1
 pycodestyle==2.0.0
 pyflakes==1.2.3
+PyMySQL==0.7.9
 pyparsing==2.1.10
 pytz==2016.10
 PyYAML==3.12
