--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.4.7
 flake8==3.0.4
 flake8-double-quotes==0.0.1
 flake8-import-order==0.9.2
+gunicorn==19.6.0
 kombu==4.0.2
 mccabe==0.5.2
 packaging==16.8
