--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@ variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
 
 before_script:
-  - pip install -U pip setuptools
-  - pip install -r requirements.txt
   - mkdir -p ~/.ssh
   - echo "$DOKKU_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
   - chmod 600 ~/.ssh/id_rsa
@@ -31,6 +29,6 @@ deploy_to_dokku:
     name: staging
     url: http://seot-staging.mars.ais.cmc.osaka-u.ac.jp
   script:
-    - git push dokku@mars.ais.cmc.osaka-u.ac.jp:seot-staging $CI_BUILD_REF
+    - git push dokku@mars.ais.cmc.osaka-u.ac.jp:seot-staging $CI_BUILD_REF:master
   only:
     - master
