create_zmq()内のバグ修正

--- a/app_define_files/sample_seot_app.yml
+++ b/app_define_files/sample_seot_app.yml
@@ -7,9 +7,7 @@ nodes:
       hoge: hoi
     interval: 1
   to:
-    - debug2
-- name: debug2
-  type: DebugSink
+    - debug
 - name: sense
   type: StubSenseHatSource
   to:
